--- a/UI.Web/Views/Home/Index.cshtml
+++ b/UI.Web/Views/Home/Index.cshtml
@@ -3,12 +3,16 @@
     ViewData["Title"] = "Home Page";
 }
 
+<a asp-action="Create" class="btn btn-info btn-sm">Kategori Ekle</a>
 <table class="table table-bordered table-sm">
      @foreach (var item in Model)
 	{
 		 <tr>
              <td>@item.Id</td>
              <td>@item.Name</td>
+             <td>
+                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">Düzenle</a>
+             </td>
          </tr>
 	}
 </table>
